# examples

./: .tool-versions
club/oscal/community/: ssp.xml
gov/nist/csf/: csf_catalog.json  csf_catalog.xml  csf_catalog.yaml
src/com/amazon/aws/securityhub/: .gitignore  pyproject.toml  transform.py
src/gov/nist/cscrm/: pyproject.toml  transform.py
src/gov/nist/csf/: cprt_CSF_1_1_0_06-21-2023.json  pyproject.toml  transform.py
src/gov/nist/ssdf/: NIST.SP.800-218.SSDF-table.xlsx  README.md  pyproject.toml  ssdf.oscal.json.j2  ssdf_catalog.json.j2  transform.py
