[tool.poetry]
name = "ssdf"
version = "0.0.1"
description = "Utilities to convert SSDF catalog into OSCAL."
authors = ["Al S <xee5ch.gh.al@il5.in>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "3.0.9"
Jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
