[tool.poetry]
name = "securityhub"
version = "0.1.0"
description = "Scripting to convert AWS Security Hub controls for AWS services into AWS format."
authors = ["Al S <xee5ch@member.fsf.org>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "3.1.2"
requests = "2.31.0"
parsel = "1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
